--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@vercel/analytics": "^1.0.2",
     "animate.css": "^4.1.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
